--- a/gcn_backend-gpu--main/requirements.txt
+++ b/gcn_backend-gpu--main/requirements.txt
@@ -1,9 +1,9 @@
-torch==2.5.1
-torch-geometric==2.6.1
-flask==2.3.3
-flask-cors==4.0.0
-pandas==2.0.3
-numpy==1.26.4
-openpyxl==3.1.2
-deap==1.3.3
-matplotlib==3.7.2
+torch>=2.5.0
+torch-geometric>=2.6.0
+flask>=2.3.0
+flask-cors>=4.0.0
+pandas>=2.2.0
+numpy>=1.26.0,<2.0.0
+openpyxl>=3.1.0
+deap>=1.3.0
+matplotlib>=3.7.0
