--- a/gcn_backend-gpu--main/requirements.txt
+++ b/gcn_backend-gpu--main/requirements.txt
@@ -1,9 +1,12 @@
-torch>=2.5.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+torchaudio==2.5.1+cpu
 torch-geometric>=2.6.0
 flask>=2.3.0
 flask-cors>=4.0.0
 pandas>=2.2.0
-numpy>=1.26.0,<2.0.0
+numpy>=1.26.0
 openpyxl>=3.1.0
 deap>=1.3.0
 matplotlib>=3.7.0
